# C--

./: .gitignore
project_root/: CMakeLists.txt  readme.md
project_root/common/: CMakeLists.txt
project_root/common/include/common/: timer.h  utils.h
project_root/common/src/: utils.cpp
project_root/include/: quant.h
project_root/problems/conv2d/: CMakeLists.txt
project_root/problems/conv2d/include/: conv.h
project_root/problems/conv2d/src/: conv.cpp  main.cpp
project_root/problems/matmul_nvtx/: CMakeLists.txt  readme.md
project_root/problems/matmul_nvtx/src/: matmul_nvtx.cpp
project_root/problems/memcpy_opt/: CMakeLists.txt
project_root/problems/memcpy_opt/include/: memcpy_opt.h
project_root/problems/memcpy_opt/src/: main.cpp  memcpy_opt.cpp
project_root/problems/quant/: CMakeLists.txt
project_root/problems/quant/include/: quant.h
project_root/problems/quant/src/: main.cpp  quant.cpp
project_root/src/: main.cpp  quant.cpp  utils.cpp
